--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/date-picker": "^2.1.6",
+    "@nextui-org/system": "^2.2.5",
+    "@nextui-org/theme": "^2.2.9",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.3.30",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
+    "react-day-picker": "^9.0.8",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
@@ -19,6 +26,8 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.10",
+    "date-picker-svelte": "^2.13.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
